Fix image alignment in chess cells by adjusting transform property

--- a/Games/Chess/chess.css
+++ b/Games/Chess/chess.css
@@ -55,6 +55,7 @@ button:hover {
     width: 20%;
     height: 20%;
     object-fit: contain;
+    transform: translate(0,-50%);
 }
 
 .row:nth-child(odd) .cell:nth-child(odd),
